# WBZ-GG

./: .gitignore  HANDOVER.md  README.md  STACK_CHECKLIST.md  SUPABASE_SETUP.md  next.config.mjs  package-lock.json  package.json  start_wbz.bat  tailwind.config.ts  test-weapon.js  tmp_3dd8aef.js  tmp_3f7527a.js  tmp_bad077b.js  tmp_battlegrounds_map_app.js  tmp_battlegrounds_map_summerland.html  tmp_bgp_Baltic_vehicleSpots.json  tmp_bgp_Baltic_vehicles.json  tmp_bgp_Chimera_vehicleSpots.json  tmp_bgp_Chimera_vehicles.json  tmp_bgp_Desert_vehicleSpots.json  tmp_bgp_Desert_vehicles.json  tmp_bgp_DihorOtok_vehicleSpots.json  tmp_bgp_DihorOtok_vehicles.json  tmp_bgp_Heaven_vehicles.json  tmp_bgp_Kiki_vehicleSpots.json  tmp_bgp_Kiki_vehicles.json  tmp_bgp_Savage_vehicleSpots.json  tmp_bgp_Savage_vehicles.json  tmp_bgp_Summerland_vehicleSpots.json  tmp_bgp_Tiger_vehicleSpots.json  tmp_bgp_Tiger_vehicles.json  tmp_bgp_Tiger_vehicles_pretty.json  tmp_bgp_bld.js  tmp_bgp_cdf.js  tmp_bgp_home.html  tmp_contraband_sample.html  tmp_e2fdbb7.js  tmp_ee871d9.js  tmp_fcaf40e.js  (+26 more)
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  players.py
docs/: PUBG_BUSINESS_IP_GUIDE_KO.md  PUBG_OFFICIAL_DATA_SCOPE_KO.md
secrets/: README.md  private.keys.template.env
src/: middleware.ts  supabase.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
(+133 files in other folders)
